# cars-api

./: README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
cars/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
cars/migrations/: 0001_initial.py
cars_project/: asgi.py  settings.py  urls.py  wsgi.py
